syntax = "proto3";

option csharp_namespace = "Quiz";

package catalog;

service Subject {
  rpc GetSubject (SubjectRequest) returns (SubjectReply);
}

message SubjectRequest {
  string id = 1;
}

message SubjectReply {
  string id = 1;
  string name = 2;
}